--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,7 +1,7 @@
 #summary One-sentence summary of this page.
 = Plan = 
 [#Introduction  Introduction]
-[#details  Details]
+[#Details  Details]
 = Introduction =
 
 La poésie numérique est une forme de littérature électronique qui peut être générée à l’aide de l’ordinateur, et peut être publiée sur Internet, CD, DVD.
