--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -17,6 +17,25 @@ Add your content here.  Format your content with:
   * Headings, paragraphs, and lists
   * Automatic links to other wiki pages
 
+Les langages utilisés pour créer l’interface sont les suivants :
+
+-	XUL : (prononcez zool) pour XML-based User interface Language a été créé  pour permettre un développement du navigateur Mozilla plus facile et plus rapide. C'est un langage XML donc il possède toutes les caractéristiques disponibles dans XML qui est un langage de balisage permet le transfère de structure de document et son contenu.
+
+Caractéristiques :
+
+•	Open Source 
+•	Permet de construire des plugins FireFox
+•	Permet d’utiliser des objets (widgets) prédéfinis pour construire l’interface (arbre, barre d'outils  menus etc..).
+•	Peut décrire des fenêtres contenant plusieurs documents HTML. 
+•	XUL est représenté par un ensemble d'objet appelé AOM (Application Object Model)
+•	Une application XUL peut être lancée soit dans un navigateur Firefox soit de façon autonome avec le XUL-RUNNER (documentation).
+•	Permet de faire du multi-thread
+•	Peut utiliser des bibliothèques externes (C, C++, Java)
+
+
+-	SVG : (Scalable Vector Graphics ), couramment abrégé par le sigle SVG, est un format de données conçu pour décrire des ensembles de graphiques vectoriels et basé sur XML. Ce format est spécifié par le World Wide Web Consortium. Il est nativement pris en compte par XUL
+
+-	JavaScript : est un langage de programmation de scripts principalement utilisé pour les pages web interactives. C'est un langage orienté objets à prototype, c'est-à-dire que les bases du langage et ses principales interfaces sont fournies par des objets qui ne sont pas instanciés au sein de classes mais qui sont chacun équipés de constructeurs permettant de générer leurs propriétés, et notamment une propriété de prototypage qui permet d'en générer des objets héritiers personnalisés.
 
 
 
