--- a/wiki/Archipoenum.wiki
+++ b/wiki/Archipoenum.wiki
@@ -1,7 +1,7 @@
 #summary One-sentence summary of this page.
 = Plan = 
 [#Introduction  Introduction]
-[#D.C3.A9tails_Projet_DP Détails Projet DP]
+[#D.C3.A9tails_Projet_DP D.C3.A9tails Projet DP]
 [#Details_Project Details Project]
 
 = Introduction =
