--- a/wiki/Archipoenum.wiki
+++ b/wiki/Archipoenum.wiki
@@ -1,5 +1,5 @@
 #summary One-sentence summary of this page.
-= Plan = 
+<wiki:toc max_depth="1" />
 [#Introduction  Introduction]
 [#D.C3.A9tails_Projet_DP D.C3.A9tails Projet DP]
 [#Details_Project Details Project]
