--- a/wiki/Archipoenum.wiki
+++ b/wiki/Archipoenum.wiki
@@ -33,3 +33,12 @@ SVG (Scalable Vector Graphics ), couramment abrégé par le sigle SVG, est un fo
 <br><br>
 ==Javascript==
 JavaScript est un langage de programmation de scripts principalement utilisé pour les pages web interactives. C'est un langage orienté objets à prototype, c'est-à-dire que les bases du langage et ses principales interfaces sont fournies par des objets qui ne sont pas instanciés au sein de classes mais qui sont chacun équipés de constructeurs permettant de générer leurs propriétés, et notamment une propriété de prototypage qui permet d'en générer des objets héritiers personnalisés.<br>
+
+= Conception=
+== Schéma de Base de données ==
+[http://code.google.com/p/archipoenum/source/browse/trunk/wiki/base_de_%20donnees.png]
+== Digrammes UML ==
+Pour concevoir une telle application, on a utilisé le langage UML qui décrit bien l'interface et les différentes fonctionalités proposées.
+http://code.google.com/p/archipoenum/source/browse/trunk/images/savoir-1.jpg
+=== Cas d'utilisation===
+http://code.google.com/p/archipoenum/source/browse/trunk/wiki/Mon_Projet_CDU_1.png
